<resources>
    <string name="app_name">Catch Minions</string>
    <string-array name="bg">
        <item>Simpson House</item>
        <item>E.T. Sky</item>
        <item>Shrek Swamp</item>
        <item>Camera</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="title_activity_high_score">Highscores</string>
    <string name="addHighScore">Add your score</string>
    <string name="highscore_dialog_ok">Yes</string>
    <string name="highscore_dialog_cancel">No thanks</string>
    <string name="highscore_dialog_tv_score">Score:</string>
    <string name="highscore_dialog_tv_name">Name:</string>
    <string name="btn_play">Play</string>
    <string name="btn_options">Settings</string>
    <string name="btn_help">Help</string>
    <string name="btn_score">Scores</string>
    <string name="btn_quit">Quit</string>
    <string name="highscore_no_highscore">You have no saved highscore.</string>
    <string name="menu_highscore_clearHighscore">Clear highscore</string>
    <string name="highscore_header_name">Name</string>
    <string name="highscore_header_score">score</string>
    <string name="btn_menu">Menu</string>
    <string name="title_dialog_background">Background</string>
    <string name="help_hand">Use the hand to catch the minions. Touch the screen and the hand will go to the point you touch.</string>
    <string name="help_hand_catch">The hand catch the minon as soon they arrived at there position, but they are always on the move. You have to predict there next location to get them.</string>
    <string name="help_minion_jail">When you catch a minion, he goes in jail.</string>
</resources>
