<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highscore_dialog_tv_score"
            android:textStyle="bold"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/tv_highScore_dialog_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highscore_dialog_tv_name"
            android:textStyle="bold"
            android:layout_weight="3"/>
        <EditText
            android:id="@+id/ed_highScore_dialog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_highScore_dialog_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/highscore_dialog_ok"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_highScore_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/highscore_dialog_cancel"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>